--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,42 @@
-header {
-	margin: 20px 0px;
+body {
+    background-color: #fafafa;
 }
 
-.nav-holder {
-	text-align: center;
+.main-title {
+    margin-top: 0px;
+    text-align: center;
 }
 
-nav ul li {
-	display: inline;
-	margin: 20px;
+section {
+    margin:64px 0px;
 }
 
-.section-title {
-	margin: 0px 0px;
+.skills {
+    padding: 40px 40px 0px 40px;
 }
 
-.section-title h2 {
-	font-size: 35px;
-	margin-bottom: 0px;
+.skills-left {
+    background-color: #8CCFCB;
+    color: #fafafa;
 }
 
-.section-sub-title {
-	margin: 0px 0px 20px 0px;
+.skills-center {
+    background-color: #E17A59;
+    color: #fafafa;
 }
 
-.section-sub-title h3 {
-	font-size: 24px;
+.skills-right {
+    background-color: #8CCFCB;
+    color: #fafafa;
 }
 
-.section-content p {
-	font-size: 16px;
+.content-wrap {
+    margin-top: 20px;
+    border: 1px solid #d5d5d5;
+    border-radius: 5px;
+    padding: 10px;
 }
 
-.section {
-	margin: 32px;
+.projects .section-info {
+    text-align: center;
 }
-
-.project-thumbnail {
-	margin: 10px 0px;
-}
-
