--- a/css/styles.css
+++ b/css/styles.css
@@ -7,27 +7,37 @@ body {
     text-align: center;
 }
 
+.main-title .jumbotron {
+    background-color: #008081;
+}
+
+.title-holder {
+    margin-bottom: 30px;
+    color: #fafafa;
+}
+
 section {
     margin:64px 0px;
 }
 
+.skills-section {
+    background-color: #e9ecef;
+    padding: 120px;
+}
+
 .skills {
-    padding: 40px 40px 0px 40px;
+    padding: 40px 40px 40px 40px;
+    background-color: #fafafa;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+    height: 100%;
+    -webkit-box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.3);
+    box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.3);
 }
 
-.skills-left {
-    background-color: #8CCFCB;
-    color: #fafafa;
-}
-
-.skills-center {
-    background-color: #E17A59;
-    color: #fafafa;
-}
-
-.skills-right {
-    background-color: #8CCFCB;
-    color: #fafafa;
+.list-header-box {
+    text-align: center;
 }
 
 .content-wrap {
@@ -38,5 +48,34 @@ section {
 }
 
 .projects .section-info {
+    text-align: center;
+}
+
+.btn-primary {
+    background-color: rgba(255,127,80,1);
+    border-color: rgba(255,127,80,1);
+}
+
+.btn-primary:hover {
+    background-color: #ffaa8b;
+    border-color: #ffaa8b;
+}
+
+.project-image img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.hover-content h4, .hover-content p {
+    margin-bottom: 0px;
+}
+
+i {
+    color: #ffaa8b;
+    margin-bottom: 15px;
+}
+
+.list-box {
     text-align: center;
 }
