--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: #fafafa;
+    color: #373D3F;
 }
 
 .main-title {
@@ -13,6 +14,10 @@ body {
 
 .title-holder {
     margin-bottom: 30px;
+    color: #fafafa;
+}
+
+.title-holder h4 a {
     color: #fafafa;
 }
 
@@ -78,4 +83,48 @@ i {
 
 .list-box {
     text-align: center;
+}
+
+.bottom-email h4 {
+    text-align: center;
+}
+
+.bottom-email h4 a {
+    text-align: center;
+    color: #373D3F;
+}
+
+@media (max-width: 768px) {
+    .skills-section {
+        padding: 20px;
+    }
+    .skills {
+        margin-bottom: 20px;
+    }
+}
+
+/* Lightbox styling*/
+#lightbox {
+    position:fixed; /* keeps the lightbox window in the current viewport */
+    top:0; 
+    left:0; 
+    width:100%; 
+    height:100%; 
+    background:rgba(0,0,0,.8);
+    text-align:center;
+}
+
+#lightbox p {
+    text-align:right; 
+    color:#fff; 
+    margin-right:20px; 
+    font-size:12px; 
+}
+
+#lightbox img {
+    box-shadow:0 0 25px #111;
+    -webkit-box-shadow:0 0 25px #111;
+    -moz-box-shadow:0 0 25px #111;
+    max-width:940px;
+    max-height: 900px;
 }
